fix: spacing adjusted on styling

--- a/style.css
+++ b/style.css
@@ -399,3 +399,11 @@ article .icon {
     margin: 2rem auto;
     padding: 0.5rem;
 }
+
+.contact-info-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
